[project]
name = "autonomous-sre-agent"
version = "3.0.0"
description = "Agentic AI system for Autonomous Site Reliability Engineering using LangGraph and RL."
authors = [
    { name = "Open SRE Foundation", email = "hello@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.1.0",
    "langgraph-checkpoint>=1.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "httpx>=0.25.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "api",
    "config",
    "graph",
    "incident_store",
    "learning",
    "main",
    "rag",
    "simulate_prod",
    "state",
    "telemetry",
    "tools",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
